[workspace]
resolver = "2"
members = ["hotlib"]

[package]
name = "adv_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.packages."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/mold"]

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic","jpeg"] }
bevy_rapier3d = "0.17.0"
noise = { git = "https://github.com/Usman4D/noise-rs.git" , features = ["images"]}
bevy-inspector-egui = "0.13.0"
futures-lite = "1.12.0"
hot-lib-reloader = "^0.6"
hotlib = {path = "hotlib"}
